--- a/GoalsApp/app/views/layouts/application.html.erb
+++ b/GoalsApp/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+<% if current_user %>
+  <%= button_to "Logout", session_url, method: :delete %>
+<% else  %>
+  <%= link_to "Sign Up", new_user_url %>
+  <%= link_to "Login", new_session_url %>
+
+<% end %>
+
 <%= yield %>
 
 </body>
